// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog > renders a 'dialog' 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-:r3:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a 'sheet on bottom' 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-:ri:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a 'sheet on the left' 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-:r9:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a 'sheet on the left' 2`] = `
<DocumentFragment>
  <button
    aria-controls="radix-:rc:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a 'sheet on top' 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-:rf:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a 'sheet' 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-:r6:"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a dialog trigger 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-:r0:"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > should open and close dialog 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-:rl:"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;
